tests/ui/repr/invalid_repr_width_1.stderr
error[E0277]: the trait bound `BitCount<32>: IsU16Compatible` is not satisfied
 --> tests/ui/repr/invalid_repr_width_1.rs:4:8
  |
4 | #[repr(u16)] // Too few bits!
  |        ^^^ the trait `IsU16Compatible` is not implemented for `BitCount<32>`
  |
  = help: the trait `IsU16Compatible` is implemented for `BitCount<16>`
  = help: see issue #48214

error[E0308]: mismatched types
 --> tests/ui/repr/invalid_repr_width_1.rs:4:8
  |
4 | #[repr(u16)] // Too few bits!
  |        ^^^ expected an array with a size of 4, found one with a size of 2

error[E0308]: mismatched types
 --> tests/ui/repr/invalid_repr_width_1.rs:4:8
  |
4 | #[repr(u16)] // Too few bits!
  |        ^^^
  |        |
  |        expected an array with a size of 2, found one with a size of 4
  |        arguments to this function are incorrect
  |
note: associated function defined here
 --> $RUST/core/src/num/mod.rs
  = note: this error originates in the macro `uint_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
